--- a/obituary.css
+++ b/obituary.css
@@ -75,7 +75,7 @@ main {
 /* 渐显文字效果 */
 .fade-in-text {
     opacity: 0;
-    transition: opacity 2s ease-in;
+    transition: opacity 2s ease-in-out;
     text-align: center;
     font-size: 18px;
     margin: 20px 0;
@@ -92,11 +92,12 @@ main {
     border-radius: 5px;
     text-align: center;
     cursor: pointer;
-        transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .button:hover {
     background-color: #555; /* 添加悬停效果 */
+    transform: scale(1.05);
 }
 
 /* 追思相片集 */
@@ -150,7 +151,7 @@ main {
 }
 
 .flower-basket-item img {
-    width: 100%;
+    width: 100%; 
     height: auto;
     display: block;
     margin: 0 auto;
@@ -217,38 +218,33 @@ main {
 }
 
 /* 页脚部分的样式 */
-        footer {
-            background-color: #f4f4f4; /* 背景颜色 */
-            padding: 20px; /* 内边距 */
-            text-align: center; /* 文本居中 */
-            font-family: Arial, sans-serif; /* 字体 */
-        }
+footer {
+    background-color: #f4f4f4; /* 背景颜色 */
+    padding: 20px; /* 内边距 */
+    text-align: center; /* 文本居中 */
+    font-family: Arial, sans-serif; /* 字体 */
+}
 
-        footer p {
-            margin: 5px 0; /* 上下外边距 */
-            color: #333; /* 文字颜色 */
-        }
+footer p {
+    margin: 5px 0; /* 上下外边距 */
+    color: #333; /* 文字颜色 */
+}
 
-        .footer-signature {
-            font-weight: bold; /* 字体加粗 */
-        }
+.footer-signature {
+    font-weight: bold; /* 字体加粗 */
+}
 
-        .bold {
-            font-weight: bold; /* 字体加粗 */
-            text-decoration: none; /* 去掉链接下划线 */
-        }
+.bold {
+    font-weight: bold; /* 字体加粗 */
+    text-decoration: none; /* 去掉链接下划线 */
+}
 
-        footer img {
-            vertical-align: middle; /* 图标垂直对齐 */
-        }
+footer img {
+    vertical-align: middle; /* 图标垂直对齐 */
+}
 
-        footer a {
-            margin: 0 10px; /* 图标间距 */
-        }
-
-        .fade-in-text {
-    opacity: 0; /* 初始透明度为0 */
-    transition: opacity 2s ease-in-out; /* 渐变效果 */
+footer a {
+    margin: 0 10px; /* 图标间距 */
 }
 
 /* 响应式设计 */
@@ -280,4 +276,3 @@ main {
         flex-basis: calc(33.333% - 40px); /* 三栏布局 */
     }
 }
-    
