--- a/obituary.css
+++ b/obituary.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Noto Sans TC', sans-serif; /* 使用优雅的字体 */
+    font-family: '华康钢笔体W2.ttc', sans-serif; /* 使用优雅的字体 */
     background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
     color: #333;
     margin: 0;
